compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__clever_pipe_rewriting.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "\npub fn apply(f: fn(a) -> b, a: a) { a |> f }\n"

---
-module(the_app).
-compile(no_auto_import).

-export([apply/2]).

-spec apply(fun((A) -> B), A) -> B.
apply(F, A) ->
    _pipe = A,
    F(_pipe).

