compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__constant_named_mdoule_info_with_function_inside.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "\npub fn function() {\n    1\n}\n\npub const module_info = function\n\npub fn main() {\n    module_info()\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([function/0, main/0]).

-spec function() -> integer().
function() ->
    1.

-spec main() -> integer().
main() ->
    function().
