compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__constant_named_module_info.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "\npub const module_info = 1\n\npub fn main() {\n    module_info\n}\n"
---
----- SOURCE CODE

pub const module_info = 1

pub fn main() {
    module_info
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0, 'moduleInfo'/0]).

-spec 'moduleInfo'() -> integer().
'moduleInfo'() ->
    1.

-spec main() -> integer().
main() ->
    1.
