compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__constant_named_module_info_imported_qualified.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "\nimport some_module.{module_info}\n\npub fn main() {\n    module_info\n}\n"
---
----- SOURCE CODE

import some_module.{module_info}

pub fn main() {
    module_info
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> integer().
main() ->
    some_module:'moduleInfo'().
